--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Trip & Travelling</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -34,8 +34,7 @@
                 <span>TRAVELLER TYPE</span>
                 <span
                   ><svg
-                    width="18"
-                    height="19"
+                    class="menu-svg"
                     viewBox="0 0 18 10"
                     fill="none"
                     xmlns="http://www.w3.org/2000/svg"
@@ -50,8 +49,7 @@
                 <span>COUPLE</span>
                 <span
                   ><svg
-                    width="18"
-                    height="19"
+                    class="menu-svg"
                     viewBox="0 0 18 10"
                     fill="none"
                     xmlns="http://www.w3.org/2000/svg"
@@ -66,8 +64,7 @@
                 <span>PROGRAM</span>
                 <span
                   ><svg
-                    width="18"
-                    height="19"
+                    class="menu-svg"
                     viewBox="0 0 18 10"
                     fill="none"
                     xmlns="http://www.w3.org/2000/svg"
@@ -82,8 +79,7 @@
                 <span>MOUNTAINING</span>
                 <span
                   ><svg
-                    width="18"
-                    height="19"
+                    class="menu-svg"
                     viewBox="0 0 18 10"
                     fill="none"
                     xmlns="http://www.w3.org/2000/svg"
@@ -98,8 +94,7 @@
                 <span>SET LOCATION</span>
                 <span
                   ><svg
-                    width="18"
-                    height="19"
+                    class="menu-svg"
                     viewBox="0 0 18 10"
                     fill="none"
                     xmlns="http://www.w3.org/2000/svg"
@@ -240,17 +235,37 @@
           </div>
           <div id="content2" class="videos">
             <div class="video-wrapper">
-              <div class="video-icon">
+              <div class="v-icon">
                 <svg
-                  width="40"
-                  height="40"
-                  viewBox="0 0 30 36"
+                  class="play-btn"
+                  viewBox="0 0 100 100"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
                 >
-                  <path d="M30 18L0 0.679489L0 35.3205L30 18Z" fill="white" />
+                  <circle
+                    cx="50"
+                    cy="50"
+                    r="48"
+                    stroke="url(#paint0_linear_3_41)"
+                    stroke-width="4"
+                  />
+                  <path d="M70 50L40 32.6795V67.3205L70 50Z" fill="white" />
+                  <defs>
+                    <linearGradient
+                      id="paint0_linear_3_41"
+                      x1="0"
+                      y1="0"
+                      x2="100"
+                      y2="100"
+                      gradientUnits="userSpaceOnUse"
+                    >
+                      <stop stop-color="white" stop-opacity="0.2" />
+                      <stop offset="1" stop-color="white" />
+                    </linearGradient>
+                  </defs>
                 </svg>
               </div>
+
               <div class="video-content">
                 <div class="video-heading">Watch Videos</div>
                 <div class="video-desc">
