Added input in search-bar
- Added input tag in search bar

--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
                   />
                 </svg>
               </span>
+              <input class="search-input" type="text" />
             </div>
             <div class="title">
               <div class="Heading">
